--- a/aprendiendo-grid/styles.css
+++ b/aprendiendo-grid/styles.css
@@ -2,6 +2,149 @@ body{
     font-family: sans-serif;
     text-align: center;
 }
+
+/*---------------------------------EJERCICIO COMPLETO CON AREAS----------------------*/
+#website-areas *{
+    margin: 0px;
+    padding: 0px;
+}
+
+#website-areas{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: 150px 70px 1fr 70px;
+    grid-template-areas: 
+        "cabecera cabecera cabecera cabecera cabecera"
+        "menu menu menu menu menu"
+        "contenido contenido contenido contenido lateral"       
+        "pie pie pie pie pie";
+    grid-gap: 20px;
+    
+    width: 75%;
+    height: 1000px;
+    margin: 0px auto;
+    border: 1px solid #ccc;
+}
+
+#website-areas #cabecera{
+    grid-area: cabecera;
+    display: flex;
+    justify-content: center;
+    align-items: center;     
+    background: blue;
+    color: white;
+}
+
+#website-areas #menu{  
+    grid-area: menu;   
+    background: lightblue;
+    color: black;
+    line-height: 70px;
+}
+
+#website-areas #menu ul{
+    display: grid;
+    grid-template-columns: repeat(9,1fr);
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+#website-areas #contenido{    
+    grid-area:contenido; 
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 25px;
+    padding: 20px;
+    background: #eee;
+}
+
+#website-areas #contenido article{
+    background: #ccc;
+    border: 1px solid #555;
+}
+
+#website-areas #lateral{
+    grid-area:lateral;     
+    background: orange;
+    color: white;
+}
+
+#website-areas #pie-pagina{  
+    grid-area: pie;  
+    background-color: black;
+    color: white;
+}
+
+
+/*---------------------------------EJERCICIO COMPLETO-------------------------------*/
+#website *{
+    margin: 0px;
+    padding: 0px;
+}
+
+#website{
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: 150px 70px 1fr 70px;
+    width: 75%;
+    height: 1000px;
+    margin: 0px auto;
+    border: 1px solid #ccc;
+}
+
+#website #cabecera{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-column: 1/6;
+    background: blue;
+    color: white;
+}
+
+#website #menu{
+    grid-column: 1/6;
+    background: lightblue;
+    color: black;
+    line-height: 70px;
+}
+
+#website #menu ul{
+    display: grid;
+    grid-template-columns: repeat(9,1fr);
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+
+#website #contenido{
+    grid-column: 1/5;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 25px;
+    padding: 20px;
+    background: #eee;
+}
+
+#website #contenido article{
+    background: #ccc;
+    border: 1px solid #555;
+}
+
+#website #lateral{
+    grid-column: 5/6;
+    background: orange;
+    color: white;
+}
+
+#website #pie-pagina{
+    grid-column: 1/6;
+    background-color: black;
+    color: white;
+}
+
+/*--------------------------------------EJEMPLOS----------------------------------*/
 .layout{
     width: 80%;
     height: 600px;
