--- a/aprendiendo-bootstrap/styles.css
+++ b/aprendiendo-bootstrap/styles.css
@@ -30,3 +30,12 @@ footer{
         height: auto;
     }
 }
+
+#slider{
+    height: 450px;
+    overflow: hidden;
+}
+
+#slider img{
+    height: 450px;
+}
